# ai-infra-lab

./: .gitignore  README.md  pyproject.toml
archive/: README.md
archive/reference-agents/course-planner-agent/: README.md  pyproject.toml
archive/reference-agents/course-planner-agent/examples/: sample_request.json  sample_response.json
archive/reference-agents/course-planner-agent/src/course_planner_agent/: __init__.py  api.py  engine.py  models.py  ui.py
archive/reference-agents/course-planner-agent/src/course_planner_agent/data/: __init__.py  york_catalog.py  york_cs.py
archive/reference-agents/course-planner-agent/tests/: test_catalog.py  test_engine.py
archive/superseded-docs/: AI_AGENT_CONTROL_PLANE_PORTFOLIO.md
arp/: __init__.py  baseline.py  cli.py  graders.py  report.py  runner.py  sample_agent.py  schema.py  traces.py
docs/: ARCHITECTURE.md  CAPABILITY.md  MODULE_STRUCTURE.md  NEXT_30_DAYS.md  ROADMAP.md
evals/cases/: sample_task_success.json
evals/suites/: sample.json
examples/traces/: sample_error.json  sample_success.json
tests/: test_baseline.py  test_cli.py  test_runner.py  test_schema.py  test_traces.py
